Add few details

--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
     <div class="container d-flex align-items-center">
 
       <div class="logo mr-auto">
-        <h4 class="text-light"><a href="index.html"><span>RACG</span></a></h4>
+        <h4 class="text-light d-none d-md-block"><a href="index.html"><span>Rotaract Club of GITAM</span></a></h4>
+        <h4 class="text-light d-md-none"><a href="index.html"><span>RACG</span></a></h4>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -70,7 +71,8 @@
           <!-- <li class="book-a-table text-center"><a href="#book-a-table">Join Rotaract</a></li> -->
         </ul>
       </nav><!-- .nav-menu -->
-      <img src="assets/img/gitam-logo.png" alt="GITAM" class="gitamlogo">
+      <img src="assets/img/gitam-logo.png" alt="GITAM" class="gitamlogo d-none d-md-block">
+      <img src="assets/img/small-gitam-logo.png" alt="GITAM" class="smallgitamlogo d-md-none mr-5">
 
     </div>
   </header><!-- End Header -->
@@ -92,7 +94,7 @@
                 <!-- <p class="animate__animated animate__fadeInUp">Rotaract Club of GITAM is a youth and student centric organization comprising of students from GITAM Deemed to be University</p> -->
                 <div>
                   <a href="assets/img/Rotaract Club of GITAM charter 2.pdf" class="btn-menu animate__animated animate__fadeInUp scrollto" target="blank">Charter</a>
-                  <a href="#book-a-table" class="btn-book animate__animated animate__fadeInUp scrollto">Join Rotaract</a>
+                  <a href="#book-a-table" class="btn-book animate__animated animate__fadeInUp scrollto mt-sm-2 mt-xs-2">Join Rotaract</a>
                 </div>
               </div>
             </div>
@@ -106,7 +108,7 @@
                 <!-- <p class="animate__animated animate__fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p> -->
                 <div>
                   <a href="assets/img/Rotaract Club of GITAM charter 2.pdf" class="btn-menu animate__animated animate__fadeInUp scrollto" target="blank">Charter</a>
-                  <a href="#book-a-table" class="btn-book animate__animated animate__fadeInUp scrollto">Join Rotaract</a>
+                  <a href="#book-a-table" class="btn-book animate__animated animate__fadeInUp scrollto mt-sm-2 mt-xs-2">Join Rotaract</a>
                 </div>
               </div>
             </div>
@@ -121,7 +123,7 @@
                 <!-- <p class="animate__animated animate__fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p> -->
                 <div>
                   <a href="assets/img/Rotaract Club of GITAM charter 2.pdf" class="btn-menu animate__animated animate__fadeInUp scrollto" target="blank">Charter</a>
-                  <a href="#book-a-table" class="btn-book animate__animated animate__fadeInUp scrollto">Join Rotaract</a>
+                  <a href="#book-a-table" class="btn-book animate__animated animate__fadeInUp scrollto mt-sm-2 mt-xs-2">Join Rotaract</a>
                 </div>
               </div>
             </div>
@@ -444,62 +446,89 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Organize Your <span>Events</span> in our Restaurant</h2>
+          <h2>Current<span> Events</span></h2>
         </div>
 
         <div class="owl-carousel events-carousel">
 
           <div class="row event-item">
             <div class="col-lg-6">
-              <img src="assets/img/event-birthday.jpg" class="img-fluid" alt="">
+              <img src="assets/img/Alumni-connect.jpeg" class="img-fluid" alt="">
             </div>
             <div class="col-lg-6 pt-4 pt-lg-0 content">
-              <h3>Birthday Parties</h3>
+              <h3>Alumni Connect</h3>
               <div class="price">
-                <p><span>$189</span></p>
+                <p><strong>Event date:</strong><span> 6th February, 2021</span></p>
               </div>
+              <br>
               <p class="font-italic">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                magna aliqua.
+                " Every new experience bring its own maturity and greater clarity of vision "
               </p>
-              <ul>
+              <!-- <ul>
                 <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
                 <li><i class="icofont-check-circled"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
                 <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-              </ul>
+              </ul> -->
               <p>
-                Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                velit esse cillum dolore eu fugiat nulla pariatur
+                As s student, we will have many doubts about how our lives will be after college?
+                <br>
+                <br>
+                And the only way to resolve these doubts is to ask experienced people.
+                <br>
+                <br>
+                Rotaract Club of GITAM is back with another event "Alumni Connect" - an interactive session with the rotaractors of 2010-12. You can hear their experiences which helps a career guide.
+                <br>
+                <br>
+                <strong>Time:</strong> 8:15 PM<br>
+                <strong>Venue:</strong> Zoom Online meeting<br>
+                <br>
+                Don't miss this opportunity
+                <br><br>
+                <a href="https://gitam.zoom.us/j/93703775571" target="blank">Click here</a> to join the meet.
               </p>
             </div>
           </div>
 
           <div class="row event-item">
             <div class="col-lg-6">
-              <img src="assets/img/event-private.jpg" class="img-fluid" alt="">
+              <img src="assets/img/alumni-connect-2.jpeg" class="img-fluid" alt="">
             </div>
             <div class="col-lg-6 pt-4 pt-lg-0 content">
-              <h3>Private Parties</h3>
+              <h3>Alumni Connect</h3>
               <div class="price">
-                <p><span>$290</span></p>
+                <p><strong>Event date:</strong><span> 6th February, 2021</span></p>
               </div>
+              <br>
               <p class="font-italic">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                magna aliqua.
+                " Every new experience bring its own maturity and greater clarity of vision "
               </p>
-              <ul>
+              <!-- <ul>
                 <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
                 <li><i class="icofont-check-circled"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
                 <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-              </ul>
+              </ul> -->
               <p>
-                Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                velit esse cillum dolore eu fugiat nulla pariatur
+                As s student, we will have many doubts about how our lives will be after college?
+                <br>
+                <br>
+                And the only way to resolve these doubts is to ask experienced people.
+                <br>
+                <br>
+                Rotaract Club of GITAM is back with another event "Alumni Connect" - an interactive session with the rotaractors of 2010-12. You can hear their experiences which helps a career guide.
+                <br>
+                <br>
+                <strong>Time:</strong> 8:15 PM<br>
+                <strong>Venue:</strong> Zoom Online meeting<br>
+                <br>
+                Don't miss this opportunity
+                <br><br>
+                <a href="https://gitam.zoom.us/j/93703775571" target="blank">Click here</a> to join the meet.
               </p>
             </div>
+
           </div>
 
-          <div class="row event-item">
+          <!-- <div class="row event-item">
             <div class="col-lg-6">
               <img src="assets/img/event-custom.jpg" class="img-fluid" alt="">
             </div>
@@ -522,7 +551,7 @@
                 velit esse cillum dolore eu fugiat nulla pariatur
               </p>
             </div>
-          </div>
+          </div> -->
 
         </div>
 
@@ -925,10 +954,10 @@
                 <i class="icofont-star"></i>
               </div>
             </div>
-            <!-- <div class="alumni">
-              <img src="assets/img/Alumni/Avinash.jpeg" class="testimonial-img" alt="">
-              <h3>Avinash Gidugu</h3>
-              <h4>Advisory Consultant, Deloitte</h4>
+            <div class="alumni">
+              <img src="assets/img/Alumni/sumit.jpeg" class="testimonial-img" alt="">
+              <h3>Sumit Agarwal</h3>
+              <h4>Business Man</h4>
               <div class="stars">
                 <i class="icofont-star"></i>
                 <i class="icofont-star"></i>
@@ -936,7 +965,7 @@
                 <i class="icofont-star"></i>
                 <i class="icofont-star"></i>
               </div>
-            </div> -->
+            </div>
             <!-- <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
               Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
