--- a/index.html
+++ b/index.html
@@ -1068,7 +1068,7 @@
         <a href="https://www.linkedin.com/company/rotaract-club-of-gitam" class="linkedin" target="blank"><i class="bx bxl-linkedin"></i></a>
       </div>
       <div class="copyright">
-        &copy; Copyright <strong><span>Delicious</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>RACG</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
