made few changes in inner pages

--- a/community.html
+++ b/community.html
@@ -43,8 +43,8 @@
   <!-- ======= Top Bar ======= -->
   <section id="topbar" class="d-none d-lg-flex align-items-center fixed-top ">
     <div class="container text-right">
-      <i class="icofont-phone"></i> +1 5589 55488 55
-      <i class="icofont-clock-time icofont-rotate-180"></i> Mon-Sat: 11:00 AM - 23:00 PM
+      <i class="icofont-phone"></i> +91 9182684010
+      <i class="icofont-email"></i> gitamrotaract@gmail.com
     </div>
   </section>
 
@@ -53,7 +53,8 @@
     <div class="container d-flex align-items-center">
 
       <div class="logo mr-auto">
-        <h1 class="text-light"><a href="index.html"><span>Delicious</span></a></h1>
+        <h4 class="text-light d-none d-md-block"><a href="index.html"><span>Rotaract Club of GITAM</span></a></h4>
+        <h4 class="text-light d-md-none"><a href="index.html"><span>RACG</span></a></h4>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -61,15 +62,15 @@
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li class="active"><a href="index.html">Home</a></li>
-          <li><a href="#about">About</a></li>
+          <!-- <li><a href="#about">About</a></li>
           <li><a href="#menu">Menu</a></li>
           <li><a href="#specials">Specials</a></li>
           <li><a href="#events">Events</a></li>
           <li><a href="#chefs">Chefs</a></li>
           <li><a href="#gallery">Gallery</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#contact">Contact</a></li> -->
 
-          <li class="book-a-table text-center"><a href="#book-a-table">Book a table</a></li>
+          <!-- <li class="book-a-table text-center"><a href="#book-a-table">Book a table</a></li> -->
         </ul>
       </nav><!-- .nav-menu -->
 
@@ -240,14 +241,14 @@
       <h3>Rotaract Club of GITAM</h3>
       <p>Rotaract Club of GITAM is a university based, service oriented club in GITAM university</p>
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a> -->
+        <a href="https://www.facebook.com/rotaractgitam" class="facebook" target="blank"><i class="bx bxl-facebook"></i></a>
+        <a href="https://www.instagram.com/rotaractclubofgitam/" class="instagram" target="blank"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.youtube.com/user/rcgu2010" class="youtube" target="blank"><i class="bx bxl-youtube"></i></a>
+        <a href="https://www.linkedin.com/company/rotaract-club-of-gitam" class="linkedin" target="blank"><i class="bx bxl-linkedin"></i></a>
       </div>
       <div class="copyright">
-        &copy; Copyright <strong><span>Delicious</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>RACG</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
