--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <!-- <p class="animate__animated animate__fadeInUp">Rotaract Club of GITAM is a youth and student centric organization comprising of students from GITAM Deemed to be University</p> -->
                 <div>
                   <a href="assets/img/Rotaract Club of GITAM charter 2.pdf" class="btn-menu animate__animated animate__fadeInUp scrollto" target="blank">Charter</a>
-                  <a href="#book-a-table" class="btn-book animate__animated animate__fadeInUp scrollto mt-sm-2 mt-xs-2">Join Rotaract</a>
+                  <a href="https://forms.gle/pq8Hh1wL4DGarTE47" class="btn-book animate__animated animate__fadeInUp scrollto mt-sm-2 mt-xs-2" target="blank">Join Rotaract</a>
                 </div>
               </div>
             </div>
@@ -108,7 +108,7 @@
                 <!-- <p class="animate__animated animate__fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p> -->
                 <div>
                   <a href="assets/img/Rotaract Club of GITAM charter 2.pdf" class="btn-menu animate__animated animate__fadeInUp scrollto" target="blank">Charter</a>
-                  <a href="#book-a-table" class="btn-book animate__animated animate__fadeInUp scrollto mt-sm-2 mt-xs-2">Join Rotaract</a>
+                  <a href="https://forms.gle/pq8Hh1wL4DGarTE47" class="btn-book animate__animated animate__fadeInUp scrollto mt-sm-2 mt-xs-2" target="blank">Join Rotaract</a>
                 </div>
               </div>
             </div>
@@ -123,7 +123,7 @@
                 <!-- <p class="animate__animated animate__fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p> -->
                 <div>
                   <a href="assets/img/Rotaract Club of GITAM charter 2.pdf" class="btn-menu animate__animated animate__fadeInUp scrollto" target="blank">Charter</a>
-                  <a href="#book-a-table" class="btn-book animate__animated animate__fadeInUp scrollto mt-sm-2 mt-xs-2">Join Rotaract</a>
+                  <a href="https://forms.gle/pq8Hh1wL4DGarTE47" class="btn-book animate__animated animate__fadeInUp scrollto mt-sm-2 mt-xs-2" target="blank">Join Rotaract</a>
                 </div>
               </div>
             </div>
@@ -285,7 +285,7 @@
 
           <div class="col-lg-6 menu-item filter-specialty">
             <div class="menu-content">
-              <a href="teach.html"><h4>Rotary TEACH</h4></a>
+              <a><h4>Rotary TEACH</h4></a>
             </div>
             <!-- <div class="menu-ingredients">
               Grilled chicken with provolone, artichoke hearts, and roasted red pesto
