--- a/index.html
+++ b/index.html
@@ -954,7 +954,7 @@
                 <i class="icofont-star"></i>
               </div>
             </div>
-            <div class="alumni">
+            <div class="alumni d-none d-md-block">
               <img src="assets/img/Alumni/sumit.jpeg" class="testimonial-img" alt="">
               <h3>Sumit Agarwal</h3>
               <h4>Business Man</h4>
