Zonal Rotaract Conference

--- a/index.html
+++ b/index.html
@@ -453,79 +453,76 @@
 
           <div class="row event-item">
             <div class="col-lg-6">
-              <img src="assets/img/Alumni-connect.jpeg" class="img-fluid" alt="">
+              <img src="assets/img/saharsh.jpeg" class="img-fluid" alt="">
             </div>
             <div class="col-lg-6 pt-4 pt-lg-0 content">
-              <h3>Alumni Connect</h3>
+              <h3>Saharsh - Zonal Rotaract Conference</h3>
               <div class="price">
-                <p><strong>Event date:</strong><span> 6th February, 2021</span></p>
+                <p><strong>Event date:</strong><span> 21st February, 2021</span></p>
               </div>
               <br>
               <p class="font-italic">
-                " Every new experience bring its own maturity and greater clarity of vision "
+                The wait is finally over, we've opened the registrations for Saharsh, the zonal conference 
+Just few more days to one of the greatest days for zone-1, do not miss this wonderful opportunity to get connected with everyone after such a long gap. 
+Here's a glimpse of what all you'll experience at Saharsh,
               </p>
-              <!-- <ul>
-                <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                <li><i class="icofont-check-circled"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-                <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-              </ul> -->
+              <ul>
+                <li><i class="icofont-check-circled"></i> Joint Installation of three clubs</li>
+                <li><i class="icofont-check-circled"></i> Interactive sessions with leaders of RID 3020</li>
+                <li><i class="icofont-check-circled"></i> Games and Fun activities.</li>
+              </ul>
               <p>
-                As s student, we will have many doubts about how our lives will be after college?
+                <strong>Registration fee</strong>: 200/-
                 <br>
+                <strong>Mode of Payment:</strong>
                 <br>
-                And the only way to resolve these doubts is to ask experienced people.
-                <br>
-                <br>
-                Rotaract Club of GITAM is back with another event "Alumni Connect" - an interactive session with the rotaractors of 2010-12. You can hear their experiences which helps a career guide.
-                <br>
-                <br>
-                <strong>Time:</strong> 8:15 PM<br>
-                <strong>Venue:</strong> Zoom Online meeting<br>
+                Google pay/Phonepe/Paytm: 8500618279<br>
+                <strong>Name:</strong> Harshitha Kosaraju
+                <strong>Time:</strong> 9:00 AM - 5:00 PM<br>
+                <strong>Venue:</strong> Quality Inn Bez Krishna<br>
                 <br>
                 Don't miss this opportunity
                 <br><br>
-                <a href="https://gitam.zoom.us/j/93703775571" target="blank">Click here</a> to join the meet.
+                <a href="https://forms.gle/xuMyjNFqoxcFazW37" target="blank">Click here</a> to register.
               </p>
             </div>
           </div>
 
           <div class="row event-item">
             <div class="col-lg-6">
-              <img src="assets/img/alumni-connect-2.jpeg" class="img-fluid" alt="">
+              <img src="assets/img/saharsh-2.jpeg" class="img-fluid" alt="">
             </div>
             <div class="col-lg-6 pt-4 pt-lg-0 content">
-              <h3>Alumni Connect</h3>
+              <h3>Saharsh - Zonal Rotaract Conference</h3>
               <div class="price">
-                <p><strong>Event date:</strong><span> 6th February, 2021</span></p>
+                <p><strong>Event date:</strong><span> 21st February, 2021</span></p>
               </div>
               <br>
               <p class="font-italic">
-                " Every new experience bring its own maturity and greater clarity of vision "
+                The wait is finally over, we've opened the registrations for Saharsh, the zonal conference 
+Just few more days to one of the greatest days for zone-1, do not miss this wonderful opportunity to get connected with everyone after such a long gap. 
+Here's a glimpse of what all you'll experience at Saharsh,
               </p>
-              <!-- <ul>
-                <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                <li><i class="icofont-check-circled"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-                <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-              </ul> -->
+              <ul>
+                <li><i class="icofont-check-circled"></i> Joint Installation of three clubs</li>
+                <li><i class="icofont-check-circled"></i> Interactive sessions with leaders of RID 3020</li>
+                <li><i class="icofont-check-circled"></i> Games and Fun activities.</li>
+              </ul>
               <p>
-                As s student, we will have many doubts about how our lives will be after college?
+                <strong>Registration fee</strong>: 200/-
                 <br>
+                <strong>Mode of Payment:</strong>
                 <br>
-                And the only way to resolve these doubts is to ask experienced people.
-                <br>
-                <br>
-                Rotaract Club of GITAM is back with another event "Alumni Connect" - an interactive session with the rotaractors of 2010-12. You can hear their experiences which helps a career guide.
-                <br>
-                <br>
-                <strong>Time:</strong> 8:15 PM<br>
-                <strong>Venue:</strong> Zoom Online meeting<br>
+                Google pay/Phonepe/Paytm: 8500618279<br>
+                <strong>Name:</strong> Harshitha Kosaraju
+                <strong>Time:</strong> 9:00 AM - 5:00 PM<br>
+                <strong>Venue:</strong> Quality Inn Bez Krishna<br>
                 <br>
                 Don't miss this opportunity
                 <br><br>
-                <a href="https://gitam.zoom.us/j/93703775571" target="blank">Click here</a> to join the meet.
+                <a href="https://forms.gle/xuMyjNFqoxcFazW37" target="blank">Click here</a> to register.
               </p>
             </div>
-
           </div>
 
           <!-- <div class="row event-item">
