--- a/youth.html
+++ b/youth.html
@@ -102,6 +102,84 @@
     </section> -->
     <div class="row event-item event">
       <div class="col-lg-6">
+        <img src="assets/img/Alumni-connect.jpeg" class="img-fluid" alt="">
+      </div>
+      <div class="col-lg-6 pt-4 pt-lg-0 content event-description">
+        <h3>Alumni Connect</h3>
+        <div class="price">
+          <p><strong>Event date:</strong><span> 6th February, 2021</span></p>
+        </div>
+        <br>
+        <p class="font-italic">
+          " Every new experience bring its own maturity and greater clarity of vision "
+        </p>
+        <!-- <ul>
+          <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+          <li><i class="icofont-check-circled"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
+          <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+        </ul> -->
+        <p>
+          As s student, we will have many doubts about how our lives will be after college?
+          <br>
+          <br>
+          And the only way to resolve these doubts is to ask experienced people.
+          <br>
+          <br>
+          Rotaract Club of GITAM is back with another event "Alumni Connect" - an interactive session with the rotaractors of 2010-12. You can hear their experiences which helps a career guide.
+          <br>
+          <br>
+          <strong>Time:</strong> 8:15 PM<br>
+          <strong>Venue:</strong> Zoom Online meeting<br>
+          <br>
+          <!-- Don't miss this opportunity -->
+          <br><br>
+          <!-- <a href="https://gitam.zoom.us/j/93703775571" target="blank">Click here</a> to join the meet. -->
+        </p>
+      </div>
+    </div>
+
+
+    <div class="row event-item event">
+      <div class="col-lg-6">
+        <img src="assets/img/youth/webdev.jpeg" class="img-fluid" alt="">
+      </div>
+      <div class="col-lg-6 pt-4 pt-lg-0 content event-description">
+        <h3>Upadesh - Web Development(HTML Basics)</h3>
+        <div class="event_date">
+          <p><span><strong>Event Date:</strong> 16th February, 2021</span></p>
+        </div>
+        <p class="font-italic">
+          <i></i>
+        </p>
+        <!-- <ul>
+          <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+          <li><i class="icofont-check-circled"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
+          <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+        </ul> -->
+        <p>
+          The need for web developers is increasing across the globe. According to the U.S. Bureau of Labor Statistics, "Employment of web developers is projected to grow 13% from 2018 to 2028 , much faster than the average for all occupations". If you are still waiting for the right time to start, this is the right time. Jump in! 
+        </p>
+        <p>
+          You might have many questions on how to start the web development? And where to learn from?
+          To make you out from the ambiguation,<br>
+          Rotaract Club of GITAM is back with
+
+            " Upadesh - Learn from your friends "
+
+                Web Development (with HTML basics).
+
+          A session to make you understand the scope of web development.
+        </p>
+        <p><strong>About the speaker:</strong>
+          <strong>Rtr Mukesh Javvaji</strong>
+          <br>
+          He is a student of B.Tech Computer Science in GITAM institute of technology. 
+        </p>
+      </div>
+    </div>
+
+    <div class="row event-item event">
+      <div class="col-lg-6">
         <img src="assets/img/youth/yoga.jpg" class="img-fluid" alt="">
       </div>
       <div class="col-lg-6 pt-4 pt-lg-0 content event-description">
