Changed the copyright

--- a/international.html
+++ b/international.html
@@ -142,7 +142,7 @@ The event was very lovable and we got to know about different states and their c
         <a href="https://www.linkedin.com/company/rotaract-club-of-gitam" class="linkedin" target="blank"><i class="bx bxl-linkedin"></i></a>
       </div>
       <div class="copyright">
-        &copy; Copyright <strong><span>RACG</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Genesis</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
