--- a/clubservices.html
+++ b/clubservices.html
@@ -196,7 +196,7 @@ Over 60 students participated in the game, and everyone spent quality time toget
         <a href="https://www.linkedin.com/company/rotaract-club-of-gitam" class="linkedin" target="blank"><i class="bx bxl-linkedin"></i></a>
       </div>
       <div class="copyright">
-        &copy; Copyright <strong><span>RACG</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Genesis</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
