--- a/index.html
+++ b/index.html
@@ -1065,7 +1065,7 @@ Here's a glimpse of what all you'll experience at Saharsh,
         <a href="https://www.linkedin.com/company/rotaract-club-of-gitam" class="linkedin" target="blank"><i class="bx bxl-linkedin"></i></a>
       </div>
       <div class="copyright">
-        &copy; Copyright <strong><span>RACG</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Genesis</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
