--- a/index.html
+++ b/index.html
@@ -1020,7 +1020,7 @@ Here's a glimpse of what all you'll experience at Saharsh,
           </div>
         </div>
 
-        <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+        <form action="/sendmail" method="post" role="form" class="php-email-form">
           <div class="form-row">
             <div class="col-md-6 form-group">
               <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
